# akita-pytorch

./: README.md  conftest.py  pyproject.toml  readme.md
.github/workflows/: lint.yml  pytest.yml
akita/: __init__.py  model.py
akita/nn/: __init__.py  block.py
akita_torch/nn/: block.py  module.py
tests/model/: test_akita.py
tests/nn/: test_block.py  test_module.py
