[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "akita_torch"
dynamic = ["version"]
description = "PyTorch implementation of the Akita model for Hi-C prediction from DNA sequence"
readme = "readme.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [{ name = "Junhao Liu", email = "junhaoliu17@gmail.com" }]
keywords = ["akita", "hi-c", "single-cell", "genomics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["torch>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "ruff>=0.11.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "akita_torch.version.VERSION" }

[tool.ruff]
# Specify the Python version you're targeting
target-version = "py310"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",        # Exclude notebooks from ruff checks
]

[tool.ruff.lint]
ignore = ["F405", "F403", "E741", "E712"]
